CHANGES


2017-07-30 (nb)

Updated some texts.


2017-03-25 (nb)

Source code maintenance. Cleanup.


2017-03-14 (nb)

Source code maintenance.

2017-03-14 (nb)

IMPORTANT: The ports for the DIN/CS/CLK signals ARE CHANGED to match the wiring of the upcoming new Tinusaur shield.


2017-01-08 (nb)

Fixes bug - not working with more than 2 segments. Improved initialization, updated samples.

- Function max7219_init improved: initializes all segment separately, now requires number of segments to initialize. Uses init sequence data array. Fixes bug - not working with more than 2 segments.
- Samples updated and rebuilt. HEX files updated.


2017-01-01 (nb)

IMPORTANT: MAJOR CHANGES - multiple matrices implementation in the library. Check Commit log for more details.

- Rewritten completely the max7219b_out function to handle multiple matrices.
- New function max7219b_init with advanced initialization features.
- New function max7219b_left improvements scrolling to the left.
- Replaced, function max7219b_row by the max7219b_col.
- Improved, optimized function max7219_byte.
- Improved max7219b_set, max7219b_clr, now check buffer boundaries. 
- New data in the "max7219led8x8f.h" font file, all characters included how, up to ASCII code 127.
- Life game, Scheduler, Scroll, Test, Text: sample code updated to the latest library, some other optimizations and improvements.
- Updated, improved comments in the source code.
- Updated sample HEX files.
- Updated TODO file.


2016-12-03 (nb)

IMPORTANT: Changed max7219b_row, parameters swapped. New function max7219b_get.

- IMPORTANT: Changed max7219b_row, parameters swapped.
- New function max7219b_get.
- Updated the Life game code.
- Source code formatting.


2015-05-29 (nb)

Updated testing scripts to reflect latest changes.

Removed the unused max7219bs_init_start function. Exposed the max7219bs_scheduler_userfunc function. No Scheduler dependency.

Removed the used max7219led8x8s files.


2015-05-15 (nb)
