@@ -196,10 +196,11 @@ life_board *life_boards[] = {
 int main(void) {
 
 	// ---- Initialization ----
-	max7219b_init(max7219_buffer, MAX7219_BUFFER_SIZE);
-	scheduler_init(max7219bs_scheduler_userfunc);
+	scheduler_init(SCHEDULER_USERFUNC_NULL);
 	scheduler_reinit(SCHEDULER_TCCR0B_1024, SCHEDULER_OCR0A_MIN);	// Adjust, if necessary
 	scheduler_start();
+	max7219b_init(max7219_buffer, MAX7219_BUFFER_SIZE);
+	max7219b_scheduler();
 
 	// ---- Main Loop ----
 	for (;;) {
